@@ -1,8 +1,7 @@
 lib_LTLIBRARIES = libvoikko.la
 libvoikko_la_SOURCES = voikko_suggest.c voikko_utils.c voikko_setup.c voikko_spell.c \
                        voikko_hyphenate.c voikko_charset.c porting.c
-libvoikko_la_LDFLAGS = -lmalaga -no-undefined -version-info 3:0:2
-LDADD = libmalaga.la
+libvoikko_la_LDFLAGS = -no-undefined -version-info 3:0:2
 
 bin_PROGRAMS = voikkospell voikkohyphenate
 voikkospell_SOURCES = voikkospell.c porting.c
